fixed filter button color on mobile

--- a/components/Listbox/listbox.module.scss
+++ b/components/Listbox/listbox.module.scss
@@ -15,6 +15,7 @@
   justify-content: space-between;
   padding: 0.85rem 1.25rem;
   text-transform: uppercase;
+  color: var(--black);
 }
 
 .listOptions {
